--- a/Festivaly/app/src/main/res/values/strings.xml
+++ b/Festivaly/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Festivaly</string>
-    <string name="title_activity_actividad_principal">ActividadPrincipal</string>
+    <string name="title_activity_actividad_principal">Inicio</string>
     <string name="title_home">Inicio</string>
     <string name="title_dashboard">Notificaciones</string>
     <string name="title_notifications">Mensajes</string>
@@ -10,4 +10,7 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
